fix : button align

--- a/src/styles/layout/layout.scss
+++ b/src/styles/layout/layout.scss
@@ -98,7 +98,7 @@
 }
 
 .btn-scroll2bottom {
-  transform: translate(10vh, 78vh);
+  transform: translate(10vh, 76vh);
 }
 
 .auth,
